--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -13,6 +13,8 @@ on:
       deploymentId:
         description: 'Deployment Request ID'
         required: true
+  issue_comment:
+    types: [created]
 
 permissions:
   id-token: write
@@ -68,18 +70,35 @@ jobs:
               `
             });
 
-  deploy:
-    if: |
-      github.event_name == 'workflow_dispatch' ||
-      (github.event.issue.title.startsWith('Production Deployment Request') &&
-       github.event.comment.body == '/approve-deployment')
+  deploy-manual:
+    if: github.event_name == 'workflow_dispatch'
+    runs-on: ubuntu-latest
+    environment: prod
+    steps:
+      - uses: actions/checkout@v3
+      
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: arn:aws:iam::${{ secrets.PROD_ACCOUNT_ID }}:role/github-actions-role
+          aws-region: us-east-1
+          
+      - name: Deploy to Production
+        run: |
+          ./scripts/deploy.sh \
+            prod \
+            my-stack \
+            templates/main.yaml \
+            environments/prod/parameters.json
+
+  deploy-approved:
+    if: github.event_name == 'issue_comment' && contains(github.event.issue.title, 'Production Deployment Request') && github.event.comment.body == '/approve-deployment'
     runs-on: ubuntu-latest
     environment: prod
     steps:
       - uses: actions/checkout@v3
       
       - name: Verify Approvals
-        if: github.event.comment
         uses: actions/github-script@v6
         with:
           script: |
@@ -106,11 +125,12 @@ jobs:
           ./scripts/deploy.sh \
             prod \
             my-stack \
-            templates/main.yaml
+            templates/main.yaml \
             environments/prod/parameters.json
 
   create-main-pr:
-    needs: deploy
+    needs: [deploy-manual, deploy-approved]
+    if: always() && (needs.deploy-manual.result == 'success' || needs.deploy-approved.result == 'success')
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
