--- a/templates/main.yml
+++ b/templates/main.yml
@@ -1,6 +1,6 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Description: |
-  Sample Cloudformation Template to validate pipeline
+  Sample Cloudformation Template to validate
 Parameters:
   Environment:
     Type: String
@@ -30,4 +30,5 @@ Resources:
       Tags:
         - Key: Environment
           Value: !Ref Environment
+
 
