--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -10,16 +10,18 @@ jobs:
   validate:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v4
       
-      - name: Setup cfn-lint
+      - name: Install cfn-lint
         run: pip install cfn-lint
       
-      - name: Validate Templates
+      - name: Lint CloudFormation templates
         run: |
-          for template in templates/**/*.yaml; do
-            echo "Validating $template"
-            cfn-lint $template
-            aws cloudformation validate-template \
-              --template-body file://$template
+          for template in templates/*.{yaml,yml}
+          do
+             if [ -f "$template" ]; then
+              echo "Linting $template..."
+              cfn-lint $template
+            fi
           done
