--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -6,13 +6,17 @@ on:
       - closed
     branches:
       - dev
-     
+
+permissions:
+    id-token: write
+    contents: read   
+
 jobs:
- dev-pipeline:
-  uses: ./.github/workflows/deploy.yml
-  with:
-    Environment: dev
-    region: us-east-1
- 
-  secrets:
-    role: ${{ secrets.DEPLOYMENT_ROLE }}
+    dev-pipeline:
+        uses: ./.github/workflows/deploy.yml
+        with:
+            Environment: dev
+            region: us-east-1
+        
+        secrets:
+            role: ${{ secrets.DEPLOYMENT_ROLE }}
