--- a/.github/workflows/deploy-qa.yml
+++ b/.github/workflows/deploy-qa.yml
@@ -6,7 +6,11 @@ on:
       - closed
     branches:
       - qa
- 
+       
+permissions:
+    id-token: write
+    contents: read   
+    
 jobs:
  qa-pipeline:
   uses: ./.github/workflows/deploy.yml
