--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -60,6 +60,6 @@ jobs:
         with:
           name: "my-stack-s3-${{ inputs.Environment }}"
           template: ${{ github.workspace }}/templates/main.yml
-          parameter-overrides: file:///${{ github.workspace }}/${{ inputs.Environment }}/parameters.json
+          parameter-overrides: file:///${{ github.workspace }}/environments/${{ inputs.Environment }}/parameters.json
           capabilities: CAPABILITY_NAMED_IAM, CAPABILITY_AUTO_EXPAND
           no-fail-on-empty-changeset: "1"
