--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -13,7 +13,7 @@ permissions:
 
 jobs:
     dev-pipeline:
-        uses: ./.github/workflows/deploy.yml
+        uses: ./.github/workflows/deploy-tpl.yml
         with:
             Environment: dev
             region: us-east-1
