--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -14,6 +14,11 @@ on:
   issue_comment:
     types: [created]
 
+permissions:
+  id-token: write
+  contents: read
+  pull-requests: read
+
 jobs:
  prod-pipeline:
   uses: ./.github/workflows/deploy-prd-tpl.yml
