--- a/.github/workflows/deploy-prd-tpl.yml
+++ b/.github/workflows/deploy-prd-tpl.yml
@@ -16,6 +16,7 @@ permissions:
   id-token: write
   contents: read
   pull-requests: read
+  issues: write
  
 jobs:
   linting:
@@ -47,12 +48,12 @@ jobs:
       steps:
         - uses: actions/checkout@v3
         - name: Create Deployment Request
-          uses: actions/github-script@v6
+          uses: actions/github-script@v7
           with:
             script: |
               const issue = await github.rest.issues.create({
                 owner: context.repo.owner,
-                repo: context.repo.name,
+                repo: context.repo.repo,
                 title: `Production Deployment Request - PR #${context.payload.pull_request.number}`,
                 body: `
                 ## Production Deployment Request
@@ -106,12 +107,12 @@ jobs:
       - uses: actions/checkout@v4
       
       - name: Verify Approvals
-        uses: actions/github-script@v6
+        uses: actions/github-script@v7
         with:
           script: |
             const issue = await github.rest.issues.get({
               owner: context.repo.owner,
-              repo: context.repo.name,
+              repo: context.repo.repo,
               issue_number: context.issue.number
             });
             
@@ -147,7 +148,7 @@ jobs:
           fetch-depth: 0
 
       - name: Create PR to main
-        uses: actions/github-script@v6
+        uses: actions/github-script@v7
         with:
           script: |
             const { repo, owner } = context.repo;
