--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -13,13 +13,14 @@ on:
       deploymentId:
         description: 'Deployment Request ID'
         required: true 
+        type: number
   issue_comment:
     types: [created]
 
 permissions:
   id-token: write
-  contents: read
-  pull-requests: read
+  contents: write
+  pull-requests: write
   issues: write
 
 jobs:
@@ -47,7 +48,7 @@ jobs:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Create Deployment Request
         uses: actions/github-script@v7
         with:
@@ -83,7 +84,7 @@ jobs:
     runs-on: ubuntu-latest
     environment: prod
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       
       - name: Verify Approvals
         if: github.event_name == 'issue_comment'
@@ -122,7 +123,7 @@ jobs:
     needs: deploy
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
@@ -131,13 +132,13 @@ jobs:
         with:
           script: |
             const { repo, owner } = context.repo;
-            const prodPRNumber = context.payload.pull_request.number;
+            const prodDepId = ${{ github.event.inputs.deploymentId }};
             
             await github.rest.pulls.create({
               owner,
               repo,
-              title: `Sync production changes to main - PR #${prodPRNumber}`,
+              title: `Sync production changes to main - Deployment #${prodDepId}`,
               head: 'prod',
               base: 'main',
-              body: `This PR syncs the changes from production deployment #${prodPRNumber} to the main branch.`
+              body: `This PR syncs the changes from production deployment #${prodDepId} to the main branch.`
             });
