--- a/.github/workflows/deploy-prd-tpl.yml
+++ b/.github/workflows/deploy-prd-tpl.yml
@@ -14,8 +14,8 @@ on:
  
 permissions:
   id-token: write
-  contents: read
-  pull-requests: read
+  contents: write
+  pull-requests: write
   issues: write
  
 jobs:
