--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -109,6 +109,18 @@ jobs:
           role-to-assume: ${{ secrets.DEPLOYMENT_ROLE }}
           aws-region: us-east-1
           
+      - name: Add deployment status comment
+        if: github.event_name == 'issue_comment'
+        uses: actions/github-script@v7
+        with:
+          script: |
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: `🚀 Starting deployment to PROD...`
+            })
+          
       - name: Deploy to Production
         uses: aws-actions/aws-cloudformation-github-deploy@v1
         with:
@@ -118,6 +130,18 @@ jobs:
           capabilities: CAPABILITY_NAMED_IAM, CAPABILITY_AUTO_EXPAND
           no-fail-on-empty-changeset: "1"
 
+      - name: Update deployment status
+        if: always()
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const status = ${{ job.status }} === 'success' ? '✅' : '❌';
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: `${status} Deployment to PROD ${${{ job.status }}}}`
+            })
 
   create-main-pr:
     needs: deploy
