--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -1,144 +1,24 @@
-# .github/workflows/deploy-prod.yml
 name: Prod Deployment
-
+ 
 on:
   pull_request:
-    types: [opened, synchronize]
-    branches: ['prod']
-  pull_request_target:
     types: [closed]
-    branches: ['prod']
-  workflow_dispatch:
-    inputs:
-      deploymentId:
-        description: 'Deployment Request ID'
-        required: true 
-        type: number
+    branches: ['main']
+
   issue_comment:
     types: [created]
-
+       
 permissions:
   id-token: write
-  contents: write
-  pull-requests: write
-  issues: write
-
+  pull-requests: read
+  issues: write 
+    
 jobs:
-  validate:
-    if: github.event_name == 'pull_request'
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-  
-      - name: Install cfn-lint
-        run: pip install cfn-lint
-  
-      - name: Lint CloudFormation templates
-        run: |
-            for template in templates/*.{yaml,yml}
-            do
-              if [ -f "$template" ]; then
-                echo "Linting $template..."
-                cfn-lint $template
-              fi
-            done
-
-  create-deployment-request:
-    if: github.event.pull_request.merged == true
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Create Deployment Request
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const issue = await github.rest.issues.create({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              title: `Production Deployment Request - PR #${context.payload.pull_request.number}`,
-              body: `
-              ## Production Deployment Request
-              
-              PR: #${context.payload.pull_request.number}
-              Branch: prod
-              Author: @${context.payload.pull_request.user.login}
-              
-              ### Required Approvals
-              - [ ] Production Lead
-              - [ ] Security Lead
-              - [ ] Infrastructure Lead
-              
-              ### Deployment Process
-              1. Review the changes in PR #${context.payload.pull_request.number}
-              2. Approve by checking the boxes above
-              3. Comment with \`/approve-deployment\` to trigger deployment
-              
-              ### Change Details
-              ${context.payload.pull_request.body}
-              `
-            });
-
-  deploy:
-    if: github.event_name == 'workflow_dispatch' || (github.event_name == 'issue_comment' && contains(github.event.issue.title, 'Production Deployment Request') && github.event.comment.body == '/approve-deployment')
-    runs-on: ubuntu-latest
-    environment: prod
-    steps:
-      - uses: actions/checkout@v4
-      
-      - name: Verify Approvals
-        if: github.event_name == 'issue_comment'
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const issue = await github.rest.issues.get({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              issue_number: context.issue.number
-            });
-            
-            if (!issue.data.body.includes('- [x] Production Lead') ||
-                !issue.data.body.includes('- [x] Security Lead') ||
-                !issue.data.body.includes('- [x] Infrastructure Lead')) {
-              throw new Error('Not all required approvals are in place');
-            }
-      
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          role-to-assume: ${{ secrets.DEPLOYMENT_ROLE }}
-          aws-region: us-east-1
-          
-      - name: Deploy to Production
-        uses: aws-actions/aws-cloudformation-github-deploy@v1
-        with:
-          name: "my-stack-s3-prod"
-          template: ${{ github.workspace }}/templates/main.yml
-          parameter-overrides: file:///${{ github.workspace }}/environments/prod/parameters.json
-          capabilities: CAPABILITY_NAMED_IAM, CAPABILITY_AUTO_EXPAND
-          no-fail-on-empty-changeset: "1"
-
-
-  create-main-pr:
-    needs: deploy
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Create PR to main
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const { repo, owner } = context.repo;
-            const prodDepId = ${{ github.event.inputs.deploymentId }};
-            
-            await github.rest.pulls.create({
-              owner,
-              repo,
-              title: `Sync production changes to main - Deployment #${prodDepId}`,
-              head: 'prod',
-              base: 'main',
-              body: `This PR syncs the changes from production deployment #${prodDepId} to the main branch.`
-            });
+ qa-pipeline:
+  uses: ./.github/workflows/deploy-prod-tpl.yml
+  with:
+    Environment: prod
+    region: us-east-1
+ 
+  secrets:
+    role: ${{ secrets.DEPLOYMENT_ROLE }}
